unpackaged/main/default/objects/project_cloud__Requirement__c/project_cloud__Requirement__c.object-meta.xml
<CustomObject>
    <label>Requirement</label>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>