unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Account__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show what Account this Requirement is related too.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>