unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Area__c</fullName>
    <inlineHelpText>Use this field to add sub-groupings within requirements</inlineHelpText>
    <label>Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>