unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Details__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Details__c</fullName>
    <inlineHelpText>This field will allow users to store Requirement Details.</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>