unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fulfilled__c</fullName>
    <formula>OR(OR(AND(project_cloud__Total_Fulfillments__c &gt; 0, project_cloud__Fulfillments_Satisfied__c &gt;= project_cloud__Total_Fulfillments__c), project_cloud__Related_Records_Completed__c), project_cloud__Fulfilled_Manual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Checked, all Fulfillments have been Satisfied or have been Fulfilled Manually</inlineHelpText>
    <label>Fulfilled</label>
    <type>Checkbox</type>
</CustomField>