unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Fulfilled_Manual__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fulfilled_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Users can check this box if they would like to override the Fulfilled checkbox.</inlineHelpText>
    <label>Manual Fulfillment</label>
    <type>Checkbox</type>
</CustomField>