unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Fulfillments_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fulfillments_Satisfied__c</fullName>
    <inlineHelpText>This field has been deprecated in favor of the Related Requirements Fulfilled field.</inlineHelpText>
    <label>Deprecated (Fulfillments Satisfied)</label>
    <summaryFilterItems>
        <field>project_cloud__Requirement_Fulfillment__c.project_cloud__Fulfilled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Requirement_Fulfillment__c.project_cloud__Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>