unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Goal__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal</label>
    <referenceTo>project_cloud__Goal__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>