unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Rating__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Rating__c</fullName>
    <description>Gets a calculated average for requirement ratings</description>
    <formula>project_cloud__Rating_Sum__c /  project_cloud__Rating_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>