unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Rating_Count__c</fullName>
    <inlineHelpText>Count of Requirement Ratings</inlineHelpText>
    <label>Rating Count</label>
    <summaryForeignKey>project_cloud__Requirement_Rating__c.project_cloud__Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>