unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Rating_Sum__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Rating_Sum__c</fullName>
    <inlineHelpText>Sum of Requirement Ratings</inlineHelpText>
    <label>Rating Sum</label>
    <summarizedField>project_cloud__Requirement_Rating__c.project_cloud__Rating__c</summarizedField>
    <summaryForeignKey>project_cloud__Requirement_Rating__c.project_cloud__Requirement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>