unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Related_Records_Completed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Related_Records_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be true if all related Requirement Fulfillments are complete.</description>
    <inlineHelpText>If Checked, all Requirement Fulfillments are complete</inlineHelpText>
    <label>Related Fulfillments Satisfied</label>
    <type>Checkbox</type>
</CustomField>