unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Requirement_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Requirement_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Requirement Area that this Requirement is associated with</inlineHelpText>
    <label>Requirement Area</label>
    <referenceTo>project_cloud__Requirement_Area__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>