unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box will allow users to specify if this Requirement has gotten Stakeholder sign off.</inlineHelpText>
    <label>Stakeholder Sign Off</label>
    <type>Checkbox</type>
</CustomField>