unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sub_Area__c</fullName>
    <inlineHelpText>Sub Area of this Requirement</inlineHelpText>
    <label>Sub Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>