unpackaged/main/default/objects/project_cloud__Requirement__c/fields/project_cloud__Total_Fulfillments__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total_Fulfillments__c</fullName>
    <inlineHelpText>This field will total up all of the Requirement Fulfillments related to the Requirement.</inlineHelpText>
    <label>Total Fulfillments</label>
    <summaryForeignKey>project_cloud__Requirement_Fulfillment__c.project_cloud__Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>